# myupbit01Solution

./: .env.template  .gitignore  Dockerfile  README.md  debug_tick.py  debug_trend.py  docker-compose.yml  pyproject.toml  requirements.txt  run.bat  run.sh  run_docker.sh  run_instance.sh  scan_results.json  trader_config.example.json  trader_config.json
docs/: 01_entry_strategy.md  01_universe_filtering.md  02_automated_trading_logic.md  02_trend_scanning.md  03_automated_trading_logic.md  03_configuration_guide.md  04_aws_deployment_guide.md  05_login_implementation_plan.md  07_docker_deployment_guide.md
logs/: myupbit.log.2026-01-13  myupbit.log.2026-01-14
src/myupbit01/: app.py  logger.py  main.py  trader.py  trend.py  universe.py
